# RayChess

./: CMakeLists.txt  main.cpp
sources/: main.cpp  other.cpp
